[gd_scene load_steps=2 format=3 uid="uid://y8qob3my51a"]

[ext_resource type="Script" path="res://Object/damage_area.gd" id="1_crcdu"]

[node name="DamageArea" type="Area3D"]
collision_layer = 8
collision_mask = 8
script = ExtResource("1_crcdu")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
